--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pygame = "^2.5.2"
 #vizdoom = ">1.2.3"
 pyarrow = ">17.0.0"
 jupyterlab = "^4.3.0"  # Includes Jupyter Notebook functionality
+notebook = "^7.3.3"
+memory_profiler = "^0.61.0"
+
 
 [build-system]
 requires = ["poetry-core"]
