--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pyarrow = ">17.0.0"
 jupyterlab = "^4.3.0"  # Includes Jupyter Notebook functionality
 notebook = "^7.3.3"
 memory_profiler = "^0.61.0"
+tabulate = "^0.9.0"
 
 
 [build-system]
