--- a/TP1/pyproject.toml
+++ b/TP1/pyproject.toml
@@ -21,6 +21,9 @@ jupyterlab = "^4.3.0"  # Includes Jupyter Notebook functionality
 notebook = "^7.3.3"
 memory_profiler = "^0.61.0"
 tabulate = "^0.9.0"
+folium = "^0.19.5"
+branca = "^0.8.1"
+nbdime = "^4.0.2"
 
 
 [build-system]
